--- a/BraintreeCore/build.gradle
+++ b/BraintreeCore/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'de.marcphilipp.nexus-publish'
+    id 'kotlin-android'
     id 'signing'
 }
 
@@ -50,6 +51,9 @@ android {
 dependencies {
     implementation deps.appCompat
     implementation deps.work
+
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation deps.kotlinStdLib
 
     implementation deps.roomRuntime
     annotationProcessor deps.roomCompiler
