--- a/BraintreeCore/build.gradle
+++ b/BraintreeCore/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation deps.appCompat
     implementation deps.work
 
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation deps.coreKtx
     implementation deps.kotlinStdLib
 
     implementation deps.roomRuntime
