--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ buildscript {
 
     // The 'CI' build variable will evaluate to 'true' when build script is executed via GitHub Actions
     // Ref: https://docs.github.com/en/actions/learn-github-actions/environment-variables#default-environment-variables
-    def roomVersion = System.getenv('CI') ? java7SafeRoomVersion : m1MacSafeRoomVersion
+//    def roomVersion = System.getenv('CI') ? java7SafeRoomVersion : m1MacSafeRoomVersion
+    def roomVersion = java7SafeRoomVersion
 
     ext.versions = [
             "kotlin"         : "1.5.32",
@@ -52,7 +53,7 @@ buildscript {
             "securityCrypto"             : "androidx.security:security-crypto:1.1.0-alpha03",
 
             // NEXT_MAJOR_VERSION: upgrade to 2.7.1 (or latest) when Java 7 support is explicitly dropped
-            "workKtx"                    : "androidx.work:work-runtime-ktx:2.7.0-alpha05",
+            "workKtx"                    : "androidx.work:work-runtime:2.7.0-alpha05",
             "workTesting"                : "androidx.work:work-testing:2.5.0",
 
             "roomCompiler"               : "androidx.room:room-compiler:${versions.room}",
@@ -111,7 +112,7 @@ allprojects {
     }
 }
 
-version '4.25.2'
+version '4.26.2-DEVELOPMENT'
 ext {
     compileSdkVersion = 33
     minSdkVersion = 21
