--- a/PayPalDataCollector/build.gradle
+++ b/PayPalDataCollector/build.gradle
@@ -35,6 +35,7 @@ android {
         sourceCompatibility versions.javaSourceCompatibility
         targetCompatibility versions.javaTargetCompatibility
     }
+    namespace 'com.braintreepayments.api.paypaldatacollector'
 }
 
 dependencies {
