--- a/SamsungPay/build.gradle
+++ b/SamsungPay/build.gradle
@@ -34,6 +34,7 @@ android {
         sourceCompatibility versions.javaSourceCompatibility
         targetCompatibility versions.javaTargetCompatibility
     }
+    namespace 'com.braintreepayments.api.samsungpay'
 }
 
 dependencies {
