--- a/BraintreeCore/build.gradle
+++ b/BraintreeCore/build.gradle
@@ -10,6 +10,9 @@ plugins {
 def DEVELOPMENT_URL = System.properties['DEVELOPMENT_URL'] ?: '"http://10.0.2.2:3000/"'
 
 android {
+
+    namespace 'com.braintreepayments.api'
+    testNamespace 'com.braintreepayments.apitest'
     compileSdkVersion rootProject.compileSdkVersion
 
     defaultConfig {
@@ -44,6 +47,9 @@ android {
     compileOptions {
         sourceCompatibility versions.javaSourceCompatibility
         targetCompatibility versions.javaTargetCompatibility
+        kotlinOptions {
+            jvmTarget = versions.javaSourceCompatibility
+        }
     }
 }
 
