--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -69,6 +69,7 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    namespace 'com.braintreepayments.demo'
 }
 
 
