--- a/TestUtils/build.gradle
+++ b/TestUtils/build.gradle
@@ -23,6 +23,7 @@ android {
         sourceCompatibility versions.javaSourceCompatibility
         targetCompatibility versions.javaTargetCompatibility
     }
+    namespace 'com.braintreepayments.api.testutils'
 }
 
 dependencies {
