--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
+android.nonTransitiveRClass=false
 android.useAndroidX=true
 
 # Ref: https://stackoverflow.com/a/50673210
