Fix javadocs error

--- a/gradle/gradle-publish.gradle
+++ b/gradle/gradle-publish.gradle
@@ -53,8 +53,8 @@ afterEvaluate {
 }
 
 task javadocs(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    source = project.android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
     failOnError false
 }
 
