--- a/PayPalNativeCheckout/build.gradle
+++ b/PayPalNativeCheckout/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation deps.appCompat
     implementation project(':PayPalDataCollector')
 
-    implementation('com.paypal.checkout:android-sdk:1.2.1') {
+    implementation('com.paypal.checkout:android-sdk:1.3.2-20240410.083234-2') {
         exclude group: 'com.paypal.android.sdk', module: 'data-collector'
     }
 
