--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,9 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
 }
 
